CHANGES
=======

* [tech][liuwei]refactor;add mock;add test cases
* [tech][liuwei]function finished
* [tech][liuwei]function finished
* [tech][liuwei]init