@@ -11,22 +11,22 @@
     <input type="submit" value="提交"/>
 </form>
 {% if show == "ERROR" %}
-<h3>{{ message }}</h3>
+    <h3>{{ message }}</h3>
 {% elif show == "RESULT"%}
     <pre>***<没钱赚商店>购物清单***</pre>
-    {% for item in out %}
+    {% for item in products_describe %}
         <pre>{{ item }}</pre>
     {% endfor %}
     <pre>----------------------</pre>
     {% if discount_sum != None %}
-    {% for item in discount_sum %}
-        <pre>{{ item }}</pre>
-    {% endfor %}
+        {% for item in discount_sum %}
+            <pre>{{ item }}</pre>
+        {% endfor %}
     <pre>----------------------</pre>
     {% endif %}
-    <pre>总计：{{ "%.2f" % total }}（元）</pre>
-    {% if save != 0 %}
-    <pre>节省：{{ "%.2f" % save }}（元）</pre>
+    <pre>总计：{{ "%.2f" % total_price }}（元）</pre>
+    {% if save_total_price != 0 %}
+        <pre>节省：{{ "%.2f" % save_total_price }}（元）</pre>
     {% endif %}
     <pre>**********************</pre>
 {% endif %}
